<resources>
    <string name="app_name">FoodApp</string>
    <string name="food_menu">Food Menu</string>
    <string name="food_menu_sub_text">Choose your best food have a great day</string>
    <string name="more">More</string>
    <string name="new_txt">NEW</string>
    <string name="search_txt">Search Food...</string>
    <string name="order_now">Add To Cart</string>
    <string name="add_to_cart_msg">Add to cart?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cart_items">Cart Items</string>
    <string name="cart_total">Cart Total :</string>
    <string name="check_out">Check Out</string>
    <string name="create_favourite">Create Favourite</string>
    <string name="create_combo">Create combo</string>
    <string name="create_burger">Create burger</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="favorite_products">Favorite Products</string>
    <string name="update_favourite">Update Favourite</string>
    <string name="update">Update</string>
</resources>