<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".UI.activities.CartActivity">

    <include
        android:id="@+id/topBar"
        layout="@layout/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topBar"
        android:layout_gravity="start"
        android:layout_margin="10dp"
        android:text="@string/cart_items"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/txtTotal"
        android:layout_below="@+id/txt" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/txtTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/checkOutButton">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="10dp"
            android:text="@string/cart_total"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="10dp"
            android:text="₹ 0.0"
            android:textColor="@color/colorOrange"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/checkOutButton"
        android:layout_above="@id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        app:cardBackgroundColor="@color/colorOrange"
        app:cardCornerRadius="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/check_out"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal" />

    </androidx.cardview.widget.CardView>

    <include
        android:id="@+id/bottombar"
        layout="@layout/bottombar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>